--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <title>PhD 2048: Move the bricks</title>
+  <title>Online dating 2048: Move the bricks</title>
   <link href="style/main.css" rel="stylesheet" type="text/css">
   <link rel="shortcut icon" href="favicon.ico">
   <link rel="apple-touch-icon" href="meta/apple-touch-icon.png">
@@ -12,7 +12,7 @@
   <link rel="stylesheet" type="text/css" href="style/addtohomescreen.css">
   <meta name="mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-capable" content="yes">
-  <meta name="apple-mobile-web-app-title" content="PhD 2048">
+  <meta name="apple-mobile-web-app-title" content="Dating 2048">
   <meta name="apple-mobile-web-app-status-bar-style" content="black">
   <meta name="HandheldFriendly" content="True">
   <meta name="MobileOptimized" content="320">
@@ -24,7 +24,7 @@
   </div>
   <div class="container">
     <div class="heading">
-      <h1 class="title"><div style='position:relative;height:0;width: 0;'><div id='progress'></div></div><span id='title'>PhD</span></h1>
+      <h1 class="title"><div style='position:relative;height:0;width: 0;'><div id='progress'></div></div><span id='title'>Love...</span></h1>
       <div class="scores-container">
         <div class="score-container">0</div>
         <div class="best-container">0</div>
@@ -32,8 +32,8 @@
     </div>
 
     <div class="above-game">
-      <p class="game-intro">Move the bricks to complete your PhD.</p>
-      <a class="restart-button">Drop out</a>
+      <p class="game-intro">Move the bricks to find a significant other online. Just put yourself out there!</p>
+      <a class="restart-button">Delete the apps</a>
     </div>
 
     <div class="game-container">
@@ -78,11 +78,11 @@
     </div>
 
     <p class="game-explanation">
-    <strong class='important'>How to play:</strong> Use your <strong>arrow keys</strong> to move the bricks. When two bricks of the same type touch, they <strong>merge into one!</strong><br>However, your ideas and experiments may not always work &mdash; they may produce the sticky <strong>garbage</strong>, which is resistant to moves. Two garbage bricks vanish when they touch. You will stop producing garbage after getting a <strong>paper</strong> (except for one more piece to help you eliminate any existing garbage).<br>A <strong>relationship</strong> upgrades any brick it touches for the first time. The brick shows the number of times you have benefited from it. When the 10-sec relationship ends, it will become a <strong>break-up</strong> (or garbage if you didn't use it), which downgrades bricks until you have repaid the benefits.
+    <strong class='important'>How to play the love game:</strong> Use your <strong>arrow keys</strong> to move the bricks. When two bricks of the same type touch, they <strong>merge into one!</strong><br> However, your can always get ghosted. Getting ghosted twice makes your stronger and two ghosted bricks vanish when they touch. You will stop getting ghosted after becoming exclusive.<br><strong>Good sex</strong> upgrades any brick it touches for the first time. The brick shows the number of times you have benefited from it. When the dompamine fades, it will become a <strong>Doubts</strong> brick (or you could even get ghosted), which downgrades bricks as your situationship spirals downwards.
     </p>
     <hr>
     <div style="line-height:1.65">
-    Fork <a href="https://github.com/ymfa/phd-2048" target="_blank">this game</a> on GitHub!
+    Fork the PhD version of this game: <a href="https://github.com/ymfa/phd-2048" target="_blank">here</a> on GitHub!
     </div>
 
   </div>
@@ -93,9 +93,9 @@
   <script src="js/html_actuator.js"></script>
   <script src="js/grid.js"></script>
   <script src="js/tile.js"></script>
+  <script src="js/i18n.js"></script>
   <script src="js/local_storage_manager.js"></script>
   <script src="js/game_manager.js"></script>
-  <script src="js/i18n.js"></script>
   <script src="js/application.js"></script>
   <script src="js/addtohomescreen.min.js"></script>
   <script>
